--- a/flarum.env
+++ b/flarum.env
@@ -13,4 +13,4 @@ DB_PORT=3306
 FLARUM_ADMIN_USER=admin
 FLARUM_ADMIN_PASS=MyBlog@123
 FLARUM_ADMIN_MAIL=admin@domain.tld
-FLARUM_TITLE=NUS Singtel R and D Lab Blog
+FLARUM_TITLE=Janarthanan Blog
